# funcoin

./: README.md  config.py  pyproject.toml
funcoin/: server.py
