[tool.poetry]
name = "funcoin"
version = "0.1.0"
description = "A sample cryptocurrency."
authors = ["Ankush Yadav <ankushyadav07@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyNaCl = "^1.5.0"
structlog = "^22.1.0"
colorama = "^0.4.5"
marshmallow = "^3.18.0"
marshmallow-oneofschema = "^3.0.1"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
